src/objects/Flight_Information__c.object
<CustomObject>
    <description>PIR</description>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency of the Parent PIR Form (PIR_Currency_of_conversion__c)</description>
        <formula>TEXT(PIR_Ref__r.PIR_Currency_of_conversion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Airline__c</fullName>
        <label>Airline (Tracing system)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Amount_Due__c</fullName>
        <formula>PIR_Ref__r.Amount__c  *  PIR_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIR_Flight_Date_Formated__c</fullName>
        <label>Flight Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Flight_Date__c</fullName>
        <label>Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIR_Flight_Number__c</fullName>
        <label>Flight N°</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Miles__c</fullName>
        <label>Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIR_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PIR_Ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PIR Ref.</label>
        <referenceTo>PIR_Form__c</referenceTo>
        <relationshipLabel>Flights Information</relationshipLabel>
        <relationshipName>Flights_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIR_Segment_1__c</fullName>
        <label>Segment N°</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Ticket_Number__c</fullName>
        <label>Ticket N°</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flight Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PIR_Ref__c</columns>
        <columns>PIR_Segment_1__c</columns>
        <columns>PIR_Airline__c</columns>
        <columns>PIR_From__c</columns>
        <columns>To__c</columns>
        <columns>PIR_Flight_Number__c</columns>
        <columns>PIR_Flight_Date__c</columns>
        <columns>PIR_Ticket_Number__c</columns>
        <columns>PIR_Percentage__c</columns>
        <columns>PIR_Amount_Due__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FI{000000}</displayFormat>
        <label>Fligh Info Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>